# rust-contracts-skeleton

./: Cargo.toml  README.md  dfx.json
src/rust_contracts_skeleton/: Cargo.toml
src/rust_contracts_skeleton/src/: heartbeat.rs  init.rs  lib.rs  owner.rs  tool.rs
src/rust_contracts_skeleton/src/canister/: dip20.rs  ext.rs  mod.rs  nnsdao_badge.rs
