[package]
name = "rust_contracts_skeleton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-kit = "0.4.3"
serde = "1.0"
serde_cbor = "0.11.2"
ic-ledger-types = "0.1.1"
base32 = "0.4.0"
crc32fast = "1.3.2"
